--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "assert": "^2.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
