Add VUE_APP_FRONTEND_BASE_URL for production

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VUE_APP_BACKEND_BASE_URL=https://webtech-notepad.onrender.com
+VUE_APP_FRONTEND_BASE_URL=https://webtech-frontend-0186.onrender.com/
