--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^2.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.4.5",
