--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "url": "^0.11.3",
     "util": "^0.12.5",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
