--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "assert": "^2.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
